--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=CatalogoDeBandas
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:CatalogoDeBandas;
+spring.datasource.driver=org.h2.Driver
+spring.datasource.username=bssallex
+spring.datasource.password=bssallex
+
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.flyway.enabled=true
+#spring.flyway.locations=classpath:db/migration
+#spring.jpa.show-sql=true
